Fixed jump bug

--- a/css/app.css/app.css
+++ b/css/app.css/app.css
@@ -308,7 +308,12 @@ body {
       -o-transform: translateY(-30%);
       -ms-transform: translateY(-30%);
       -moz-transform: translateY(-30%);
-      margin-top: 50px;
+      margin-top: 40px;
+      transition: 0.2s ease-in;
+      -webkit-transition: 0.2s ease-in;
+      -o-transition: 0.2s ease-in;
+      -ms-transition: 0.2s ease-in;
+      -moz-transition: 0.2s ease-in;
       width: 30vw; } }
   @media screen and (max-width: 767px) {
     .fast-facts-content-container {
@@ -338,7 +343,8 @@ body {
   -webkit-transition: 0.2s ease-out;
   -o-transition: 0.2s ease-out;
   -ms-transition: 0.2s ease-out;
-  -moz-transition: 0.2s ease-out; }
+  -moz-transition: 0.2s ease-out;
+  width: 100%; }
 
 .fast-facts-header-toggled {
   transition: 0.2s ease-in;
@@ -366,7 +372,7 @@ body {
     .fast-facts-content-toggled {
       position: absolute;
       margin-left: -40%;
-      width: 100%;
+      width: 30vw;
       transform: translateX(-30%);
       -webkit-transform: translateX(-30%);
       -o-transform: translateX(-30%);
